# aartZX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ayumi.c  ayumi.h  config.h  cpu.h  disasm.cpp  io.h  ld_table.py  main.cpp  misc.h  ymfm_interface.cpp  zx.c  zx_128k_rom.h
.github/workflows/: cmake-multi-platform.yml
